# cmd_agent

./: .gitignore  pyproject.toml  requirements.txt
src/cmd_agent/: admin_cadastro.py  agent.py  app.py  cmd_agent.session  storage.py  telegram.py  tools.py
tests/: teste_modelos.py
